add handler and service func for revoke one token
